Fixed alignment issue with error graph

--- a/client/stylesheets/less/components/reports-panel.import.less
+++ b/client/stylesheets/less/components/reports-panel.import.less
@@ -39,7 +39,6 @@
     }
 
     .errorGraph {
-      padding-left: 0px;
       padding-right: 0px;
       padding-top: 2px;
 
@@ -68,7 +67,7 @@
       small {
         color: #fff;
         position: absolute;
-        left: 2px;
+        left: 16px;
       }
     }
   }
